--- a/TiacAppAngular/tiacApp-angular/src/app/user-form/user-form.css
+++ b/TiacAppAngular/tiacApp-angular/src/app/user-form/user-form.css
@@ -62,3 +62,33 @@ button:hover {
 .inline-group button:hover {
   background-color: #a71d2a;
 }
+
+.form-container {
+  max-width: 700px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.form-group, .user-card {
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+.inline-group {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+button {
+  margin: 5px;
+  padding: 5px 10px;
+}
+
+.user-card {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 15px;
+  margin: 10px 0;
+  background-color: #f9f9f9;
+}
